csharp/ql/test/library-tests/asp/parseError/AspElement.ql
import semmle.code.asp.AspNet

from AspElement element
select element
